scrolling + other things

--- a/src/css/home.css
+++ b/src/css/home.css
@@ -1,4 +1,4 @@
-#canvas {
+canvas {
     position: fixed;
     top: 0;
     left: 0;
@@ -6,4 +6,5 @@
 
 main {
     position: absolute;
+    height: 10000px;
 }
