--- a/public/src/css/home.css
+++ b/public/src/css/home.css
@@ -2,6 +2,7 @@
 :root {
     --color-text: white;
     --color-semi-bg: rgba(15, 15, 15, 0.911);
+    --color-almost-bg: rgba(8, 8, 8, 0.95);
     --color-text-semi-contrast: rgb(189, 255, 186);
 }
 
@@ -310,4 +311,103 @@ main {
 #s10 > p {
     margin: 0;
     font-size: 4vw;
+}
+
+
+/* cards */
+.cards {
+    display: flex;
+    overflow-x: auto;
+    padding: 2em 0em;
+    gap: 1em;
+}
+
+.card {
+    width: 80vw;
+    border: 1px solid var(--color-text);
+}
+
+.card > img {
+    width: 80vw;
+    height: 40vh;
+    object-fit: contain;
+
+    background-color: var(--color-almost-bg);
+}
+
+.card > div {
+    width: 80vw;
+    height: 20vh;
+    padding-left: 1em;
+}
+
+/* games */
+#s11 {
+    position: absolute;
+    top: 14500px;
+    left: 0;
+    right: 0;
+
+    background: var(--color-semi-bg);
+    color: var(--color-text);
+
+    max-width: 95vw;
+    margin: auto;
+    text-align: center;
+    padding: 2vw;
+    
+    border-radius: 1em;
+}
+
+#s11 > h1 {
+    margin: 0;
+    font-size: 6vw;
+}
+
+
+/* websites */
+#s12 {
+    position: absolute;
+    top: 16000px;
+    left: 0;
+    right: 0;
+
+    background: var(--color-semi-bg);
+    color: var(--color-text);
+
+    max-width: 95vw;
+    margin: auto;
+    text-align: center;
+    padding: 2vw;
+    
+    border-radius: 1em;
+}
+
+#s12 > h1 {
+    margin: 0;
+    font-size: 6vw;
+}
+
+
+/* other projects */
+#s13 {
+    position: absolute;
+    top: 17500px;
+    left: 0;
+    right: 0;
+
+    background: var(--color-semi-bg);
+    color: var(--color-text);
+
+    max-width: 95vw;
+    margin: auto;
+    text-align: center;
+    padding: 2vw;
+    
+    border-radius: 1em;
+}
+
+#s13 > h1 {
+    margin: 0;
+    font-size: 6vw;
 }
