--- a/public/src/css/home.css
+++ b/public/src/css/home.css
@@ -320,10 +320,10 @@ main {
     overflow-x: auto;
     padding: 2em 0em;
     gap: 1em;
+    justify-content: space-around;
 }
 
 .card {
-    width: 80vw;
     border: 1px solid var(--color-text);
 }
 
@@ -337,9 +337,9 @@ main {
 
 .card > div {
     width: 80vw;
-    height: 20vh;
-    padding-left: 1em;
+    padding: 1em;
 }
+
 
 /* games */
 #s11 {
@@ -348,10 +348,9 @@ main {
     left: 0;
     right: 0;
 
-    background: var(--color-semi-bg);
     color: var(--color-text);
 
-    max-width: 95vw;
+    max-width: 100vw;
     margin: auto;
     text-align: center;
     padding: 2vw;
@@ -372,10 +371,9 @@ main {
     left: 0;
     right: 0;
 
-    background: var(--color-semi-bg);
     color: var(--color-text);
 
-    max-width: 95vw;
+    max-width: 100vw;
     margin: auto;
     text-align: center;
     padding: 2vw;
@@ -396,10 +394,9 @@ main {
     left: 0;
     right: 0;
 
-    background: var(--color-semi-bg);
     color: var(--color-text);
 
-    max-width: 95vw;
+    max-width: 100vw;
     margin: auto;
     text-align: center;
     padding: 2vw;
