--- a/public/src/css/style_responsive.css
+++ b/public/src/css/style_responsive.css
@@ -194,6 +194,12 @@
     nav > a > p {
         display: inline;
     }
+
+
+    /* barlists */
+    .barlist {
+        font-size: 1.5em;
+    }
 }
 
 
