--- a/public/src/css/style.css
+++ b/public/src/css/style.css
@@ -29,6 +29,9 @@ body {
     background-color: black;
     position: fixed;
     height: 100%;
+    width: 100%;
+    overflow-y: scroll;
+    -webkit-overflow-scrolling: touch;
 }
 
 canvas {
