--- a/public/src/css/style.css
+++ b/public/src/css/style.css
@@ -15,6 +15,9 @@
     --color-proficient: rgb(6, 182, 0);
     --color-competent: rgb(80, 179, 0);
     --color-learner: rgb(168, 206, 0);
+
+    --color-bg: rgb(0, 0, 0);
+    --color-cmd-text: rgb(0, 255, 0);
 }
 
 
@@ -26,7 +29,7 @@
 }
 
 body {
-    background-color: black;
+    background-color: var(--color-bg);
 }
 
 canvas {
@@ -35,7 +38,7 @@ canvas {
     left: 0;
 }
 
-main {
+[data-main-name="main"] {
     position: absolute;
     height: 22000px;
     top: 0;
@@ -43,6 +46,25 @@ main {
     right: 0;
     bottom: 0;
     margin: 0 auto;
+}
+
+[data-main-name="command-line"] {
+    z-index: 10;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    margin: 0 auto;
+
+    background-color: var(--color-bg);
+    color: var(--color-cmd-text);
+}
+
+
+/* command line */
+[data-main-name="command-line"] > p {
+    color: var(--color-cmd-text);
 }
 
 
@@ -501,7 +523,7 @@ nav {
     color: var(--color-text);
     background-color: black;
     display: flex;
-    z-index: 10;
+    z-index: 5;
     border: 1px solid var(--color-text);
     user-select: none;
 }
