--- a/public/src/css/style.css
+++ b/public/src/css/style.css
@@ -38,6 +38,10 @@ canvas {
     left: 0;
 }
 
+[data-main-name] {
+    display: none;
+}
+
 [data-main-name="main"] {
     position: absolute;
     height: 22000px;
@@ -49,6 +53,7 @@ canvas {
 }
 
 [data-main-name="command-line"] {
+    display: block;
     z-index: 10;
     position: absolute;
     top: 0;
@@ -59,12 +64,14 @@ canvas {
 
     background-color: var(--color-bg);
     color: var(--color-cmd-text);
+    padding: 0em 0.25em;
 }
 
 
 /* command line */
 [data-main-name="command-line"] > p {
     color: var(--color-cmd-text);
+    margin: 0;
 }
 
 
