--- a/public/src/css/style_responsive.css
+++ b/public/src/css/style_responsive.css
@@ -220,3 +220,13 @@
         top: -100px;
     }
 }
+
+@keyframes opacity-show {
+    0% {
+        opacity: 0;
+    }
+
+    100% {
+        opacity: 1;
+    }
+}
